[package]
name = "vps_bench"
version = "0.0.2"
authors = ["dev <dev@qiyutech.tech>"]
edition = "2018"
description = "奇遇科技 VPS 性能测试工具"
license-file = "LICENSE"
homepage = "https://vps.qiyutech.tech/"

[[bin]]
name = "vps_bench"
path = "src/main.rs"

[dependencies]
structopt = { version = "0.3" }

rand = { version = "0.8", features = ["small_rng", "getrandom"] }
