[package]
name = "vps_bench"
version = "0.1.1"
authors = ["dev <dev@qiyutech.tech>"]
edition = "2018"
description = "奇遇科技 VPS 性能测试工具"
license-file = "LICENSE"
homepage = "https://vps.qiyutech.tech/"

[[bin]]
name = "vps_bench"
path = "src/main.rs"

[[bench]]
name = "gen_bench"
harness = false

[dependencies]
structopt = { version = "0.3" }

rand = { version = "0.8", features = ["small_rng", "getrandom"] }

# for HTTP request
reqwest = { version = "0.11", features = ["blocking", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }


[dev-dependencies]
criterion = "0.3"
