[package]
name = "vps_bench"
version = "0.3.0"
authors = ["dev <dev@qiyutech.tech>"]
edition = "2018"
description = "奇遇科技 VPS 性能测试工具"
license-file = "LICENSE"
homepage = "https://vps.qiyutech.tech/"

[[bin]]
name = "vps_bench"
path = "src/main.rs"

[dependencies]
structopt = { version = "0.3" }

rand = { version = "0.8", features = ["small_rng", "getrandom"] }

# for HTTP request
reqwest = { version = "0.11", features = ["blocking", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# for test SQLite3
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls"] }
futures = { version = "0.3" }
tokio = { version = "1.2", features = ["full"] }

# for TEXT UI
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }

libc = "0.2"

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
